// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`GmailInboxList > matches snapshot: error state 1`] = `
<div
  aria-label="Gmail Inbox"
  class="gmail-inbox-list"
  role="region"
>
  <div
    class="gmail-inbox-list__header"
  >
    <div
      class="gmail-inbox-list__title-row"
    >
      <h3
        class="gmail-inbox-list__title"
      >
        Inbox
      </h3>
    </div>
  </div>
  <div
    class="gmail-inbox-list__error"
    role="alert"
  >
    <p
      class="gmail-inbox-list__error-text"
    >
      Failed to connect to Gmail. Please re-authenticate.
    </p>
  </div>
</div>
`;

exports[`GmailInboxList > matches snapshot: normal scanned inbox 1`] = `
<div
  aria-label="Gmail Inbox"
  class="gmail-inbox-list"
  role="region"
>
  <div
    class="gmail-inbox-list__header"
  >
    <div
      class="gmail-inbox-list__title-row"
    >
      <h3
        class="gmail-inbox-list__title"
      >
        Inbox
      </h3>
      <span
        aria-label="3 unread"
        class="gmail-inbox-list__badge"
      >
        3
      </span>
    </div>
  </div>
  <div
    aria-label="Email messages — drag to reorder priority"
    class="gmail-inbox-list__cards"
    role="list"
  >
    <div
      class="gmail-inbox-list__drag-item"
      draggable="true"
    >
      <div
        aria-hidden="true"
        class="gmail-inbox-list__drag-handle"
      >
        <svg
          fill="none"
          height="12"
          viewBox="0 0 12 12"
          width="12"
        >
          <circle
            cx="4"
            cy="2.5"
            fill="currentColor"
            r="1"
          />
          <circle
            cx="8"
            cy="2.5"
            fill="currentColor"
            r="1"
          />
          <circle
            cx="4"
            cy="6"
            fill="currentColor"
            r="1"
          />
          <circle
            cx="8"
            cy="6"
            fill="currentColor"
            r="1"
          />
          <circle
            cx="4"
            cy="9.5"
            fill="currentColor"
            r="1"
          />
          <circle
            cx="8"
            cy="9.5"
            fill="currentColor"
            r="1"
          />
        </svg>
      </div>
      <div
        class="gmail-inbox-list__drag-content"
      >
        <div>
          Email 1
        </div>
      </div>
      <div
        aria-label="Reorder email"
        class="gmail-inbox-list__reorder-btns"
        role="group"
      >
        <button
          aria-label="Move up"
          class="gmail-inbox-list__reorder-btn"
          disabled=""
          type="button"
        >
          <svg
            aria-hidden="true"
            fill="none"
            height="12"
            viewBox="0 0 12 12"
            width="12"
          >
            <path
              d="M2 8l4-4 4 4"
              stroke="currentColor"
              stroke-linecap="round"
              stroke-linejoin="round"
              stroke-width="1.5"
            />
          </svg>
        </button>
        <button
          aria-label="Move down"
          class="gmail-inbox-list__reorder-btn"
          type="button"
        >
          <svg
            aria-hidden="true"
            fill="none"
            height="12"
            viewBox="0 0 12 12"
            width="12"
          >
            <path
              d="M2 4l4 4 4-4"
              stroke="currentColor"
              stroke-linecap="round"
              stroke-linejoin="round"
              stroke-width="1.5"
            />
          </svg>
        </button>
      </div>
    </div>
    <div
      class="gmail-inbox-list__drag-item"
      draggable="true"
    >
      <div
        aria-hidden="true"
        class="gmail-inbox-list__drag-handle"
      >
        <svg
          fill="none"
          height="12"
          viewBox="0 0 12 12"
          width="12"
        >
          <circle
            cx="4"
            cy="2.5"
            fill="currentColor"
            r="1"
          />
          <circle
            cx="8"
            cy="2.5"
            fill="currentColor"
            r="1"
          />
          <circle
            cx="4"
            cy="6"
            fill="currentColor"
            r="1"
          />
          <circle
            cx="8"
            cy="6"
            fill="currentColor"
            r="1"
          />
          <circle
            cx="4"
            cy="9.5"
            fill="currentColor"
            r="1"
          />
          <circle
            cx="8"
            cy="9.5"
            fill="currentColor"
            r="1"
          />
        </svg>
      </div>
      <div
        class="gmail-inbox-list__drag-content"
      >
        <div>
          Email 2
        </div>
      </div>
      <div
        aria-label="Reorder email"
        class="gmail-inbox-list__reorder-btns"
        role="group"
      >
        <button
          aria-label="Move up"
          class="gmail-inbox-list__reorder-btn"
          type="button"
        >
          <svg
            aria-hidden="true"
            fill="none"
            height="12"
            viewBox="0 0 12 12"
            width="12"
          >
            <path
              d="M2 8l4-4 4 4"
              stroke="currentColor"
              stroke-linecap="round"
              stroke-linejoin="round"
              stroke-width="1.5"
            />
          </svg>
        </button>
        <button
          aria-label="Move down"
          class="gmail-inbox-list__reorder-btn"
          disabled=""
          type="button"
        >
          <svg
            aria-hidden="true"
            fill="none"
            height="12"
            viewBox="0 0 12 12"
            width="12"
          >
            <path
              d="M2 4l4 4 4-4"
              stroke="currentColor"
              stroke-linecap="round"
              stroke-linejoin="round"
              stroke-width="1.5"
            />
          </svg>
        </button>
      </div>
    </div>
  </div>
</div>
`;

exports[`GmailInboxList > matches snapshot: truncated inbox 1`] = `
<div
  aria-label="Gmail Inbox"
  class="gmail-inbox-list"
  role="region"
>
  <div
    class="gmail-inbox-list__header"
  >
    <div
      class="gmail-inbox-list__title-row"
    >
      <h3
        class="gmail-inbox-list__title"
      >
        Inbox
      </h3>
      <span
        aria-label="5 unread"
        class="gmail-inbox-list__badge"
      >
        5
      </span>
    </div>
  </div>
  <div
    aria-label="Email messages — drag to reorder priority"
    class="gmail-inbox-list__cards"
    role="list"
  >
    <div
      class="gmail-inbox-list__drag-item"
      draggable="true"
    >
      <div
        aria-hidden="true"
        class="gmail-inbox-list__drag-handle"
      >
        <svg
          fill="none"
          height="12"
          viewBox="0 0 12 12"
          width="12"
        >
          <circle
            cx="4"
            cy="2.5"
            fill="currentColor"
            r="1"
          />
          <circle
            cx="8"
            cy="2.5"
            fill="currentColor"
            r="1"
          />
          <circle
            cx="4"
            cy="6"
            fill="currentColor"
            r="1"
          />
          <circle
            cx="8"
            cy="6"
            fill="currentColor"
            r="1"
          />
          <circle
            cx="4"
            cy="9.5"
            fill="currentColor"
            r="1"
          />
          <circle
            cx="8"
            cy="9.5"
            fill="currentColor"
            r="1"
          />
        </svg>
      </div>
      <div
        class="gmail-inbox-list__drag-content"
      >
        <div>
          Email 1
        </div>
      </div>
      <div
        aria-label="Reorder email"
        class="gmail-inbox-list__reorder-btns"
        role="group"
      >
        <button
          aria-label="Move up"
          class="gmail-inbox-list__reorder-btn"
          disabled=""
          type="button"
        >
          <svg
            aria-hidden="true"
            fill="none"
            height="12"
            viewBox="0 0 12 12"
            width="12"
          >
            <path
              d="M2 8l4-4 4 4"
              stroke="currentColor"
              stroke-linecap="round"
              stroke-linejoin="round"
              stroke-width="1.5"
            />
          </svg>
        </button>
        <button
          aria-label="Move down"
          class="gmail-inbox-list__reorder-btn"
          disabled=""
          type="button"
        >
          <svg
            aria-hidden="true"
            fill="none"
            height="12"
            viewBox="0 0 12 12"
            width="12"
          >
            <path
              d="M2 4l4 4 4-4"
              stroke="currentColor"
              stroke-linecap="round"
              stroke-linejoin="round"
              stroke-width="1.5"
            />
          </svg>
        </button>
      </div>
    </div>
  </div>
  <p
    class="gmail-inbox-list__truncated"
  >
    Showing 
    25
     of 
    142
     emails
  </p>
</div>
`;

exports[`GmailInboxList > matches snapshot: unscanned inbox 1`] = `
<div
  aria-label="Gmail Inbox"
  class="gmail-inbox-list"
  role="region"
>
  <div
    class="gmail-inbox-list__header"
  >
    <div
      class="gmail-inbox-list__title-row"
    >
      <h3
        class="gmail-inbox-list__title"
      >
        Inbox
      </h3>
    </div>
    <button
      class="gmail-inbox-list__scan-btn"
    >
      WaibScan
    </button>
  </div>
  <div
    aria-label="Email messages — drag to reorder priority"
    class="gmail-inbox-list__cards"
    role="list"
  />
</div>
`;
